@@ -1,5 +1,7 @@
 version 2.0
  * added support for setting custom content-type to adapter map
+ * added support for setting bespoke rendering of null value labels via config property 'restfixture.null.value.representation'
+ * added 'comment' command row so that it's possible to comment RestFixtures; example |comment| the value of 'replaceme' is %replaceme% |
  
 version 2.0.beta.1
  * added support for SLIM
